mType/tests/testFiles/error/error/classConstructorParameterMismatch.mt
class TestClass {
    int value;
    constructor(int val) {
        value = val;
    }
}
TestClass obj("wrong_type");